tests/Fixtures/Torture/Bad/call_entry.g
// EXPECT G030
kernel { entry func Main() { Main(); } }
